# packs-registry

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: build-new-plugin-image.yml
images/nomad-job-var-autoacl/: Dockerfile  nomad-job-var-autoacl
images/nomad-job-watchdog/: Dockerfile  script  watchdog
images/nomad-job-watchdog-autoupdater/: Dockerfile  script
images/nomad-job-watchdog-scheduled/: Dockerfile
old/: .env  README.md  pyproject.toml
old/recipes/storage_drivers/nfs/: flow.json  meta.yml
old/src/shim/: __main__.py  meta.py  processor.py
packs/hello_world/: README.md
packs/job_autoacl/: metadata.hcl  outputs.tpl
packs/job_autoacl/templates/: watcher.nomad.tpl
packs/job_watchdog/: README.md  TODO  metadata.hcl  outputs.tpl  variables.hcl
packs/job_watchdog/templates/: _vars.tpl  autoupdater.nomad.tpl  scheduled.nomad.tpl  watcher.nomad.tpl
packs/job_watchdog/vars/: example.var.hcl
packs/metrics_collector/: README.md  metadata.hcl  outputs.tpl  variables.hcl
packs/metrics_collector/files/: autoconfig.sh  autoconfig_grafana.sh  autoconfig_influxdb.sh  dashboard.json  dashboard.yaml  grafana.ini  nomad.json  nomad_cluster.json  postconfig_grafana.sh  postconfig_influxdb.sh
packs/reverse_proxy/: README.md  metadata.hcl  outputs.tpl  variables.hcl
packs/storage_driver-nfs/: README.md  metadata.hcl  outputs.tpl  variables.hcl
packs/storage_drivers-nfs/: metadata.hcl  variables.hcl
scripts/: link_shared.sh
shared/: _vars.tpl
src/nomad_dtree_shim/: __main__.py
src/shim/: __main__.py  installer.py  runner.py
templates/: README.md
(+20 files in other folders)
