[build-system]
requires = ["hatchling>=1"]
build-backend = "hatchling.build"

[project]
dependencies = []
description = "Cloud Skeleton cluster recipes"
name = "recipes"
readme = "README.md"
requires-python = ">=3.13"
version = "1.0.0"

[project.scripts]
jobs = "nomad_dtree_shim.__main__:main"

[tool.hatch.build.targets.wheel]
packages = [
  "src/nomad_dtree_shim",
]