[build-system]
requires = ["hatchling>=1"]
build-backend = "hatchling.build"

[project]
dependencies = []
description = "Cloud Skeleton cluster recipes"
name = "recipes"
readme = "README.md"
requires-python = ">=3.13"
version = "1.0.0"

[project.scripts]
deploy = "shim.__main__:deploy"
destroy = "shim.__main__:destroy"

[tool.hatch.build.targets.wheel]
packages = [
  "src/shim",
]