[build-system]
requires = ["hatchling>=1"]
build-backend = "hatchling.build"

[project]
dependencies = [
    # "Jinja2==3.1.6",
    # "PyYAML==6.0.2",
    # "questionary==2.1.0",
    # "rich==14.1.0"
]
description = "Cloud Skeleton cluster recipes"
name = "recipes"
readme = "README.md"
requires-python = ">=3.13"
version = "1.0.0"

[project.scripts]
# deploy = "shim.__main__:deploy"
# destroy = "shim.__main__:destroy"
# info = "shim.__main__:info"
# list = "shim.__main__:list"

[tool.hatch.build.targets.wheel]
packages = [
    "src/shim"
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
